fix: shrink text on narrow screen size

--- a/styles/timetablejs.css
+++ b/styles/timetablejs.css
@@ -41,10 +41,16 @@
 }
 
 .timetable>aside .row-heading {
+    @media screen and (max-width: 600px) {
+        font-size: 75%;
+    }
+    @media screen and (min-width: 601px) {
+        font-size: 100%;
+    }
     display: inline-block;
     max-width: 100%;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: clip;
     white-space: nowrap;
     word-wrap: normal
 }
